app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  containers:
    - name: go-app
      image: jeshocarmel/ip_location_mapper
      ports:
        - containerPort: 8080
