app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: go-app
spec:
    replicas: 2
    selector:
        matchLabels:
            app: go-app
    template:
        metadata:
            labels:
                app: go-app
        spec:
            containers:
                - name: go-app
                  image: jeshocarmel/ip_location_mapper
                  imagePullPolicy: Always
                  ports:
                    - containerPort: 8080
                  livenessProbe:           # To check the health of the Pod
                    httpGet:
                      path: /health
                      port: 8080
                      scheme: HTTP
                    initialDelaySeconds: 5
                    periodSeconds: 15
                    timeoutSeconds: 5
                  readinessProbe:          # To check if the Pod is ready to serve traffic or not
                    httpGet:
                      path: /readiness
                      port: 8080
                      scheme: HTTP
                    initialDelaySeconds: 5
                    timeoutSeconds: 1   
                  env:                  # env variables passed to the app
                    - name: IPSTACK_API_KEY
                      valueFrom:
                        secretKeyRef:
                            name: app-secret
                            key: apikey
                            
                    - name: REDIS_URL
                      valueFrom:
                        configMapKeyRef:
                            name: app-configmap
                            key: redis-service

                    - name: REDIS_PASSWORD
                      valueFrom:
                        secretKeyRef:
                            name: app-secret
                            key: redis-password
---
kind: Service
apiVersion: v1
metadata:
  name: go-app-service
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 8080
    
  selector:
      app: go-app
