app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: app-ingress
spec:
  rules:
    - host: <NODE_BALANCER_URL>
      http:
        paths:
          - path: /
            backend:
              serviceName: go-app-service
              servicePort: 80
